gnome-shell (3.7.90-1) UNRELEASED; urgency=low

  * Sync from Ubuntu
  * d/p/ubuntu-lightdm-user-switching.patch:
    d/p/ubuntu_lock_on_suspend.patch:
    + Dropped, Ubuntu specifc
  * d/p/14_make-GLX-optional.patch: Fixed upstream

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 24 Feb 2013 15:09:57 +0100

gnome-shell (3.7.90-0ubuntu1~raring1) raring; urgency=medium

  [ Jeremy Bicha ]
  * New upstream alpha release
  * debian/control.in:
    - Drop obsolete libedataserverui-dev dependency
    - Depend on gir1.2-nmgtk-1.0
    - Build-depend on caribou and gnome-desktop3
  * debian/watch: Watch for unstable releases
  * ubuntu-lightdm-user-switching.patch: Refreshed
  * ubuntu_lock_on_suspend.patch: Disabled
  * revert-suspend-break.patch:
    - Sure, suspend is currently broken on Ubuntu with GNOME 3.8, but let's
      not break it worse than necessary
  * git_fix_too_short_apps_view.patch:
    - Fix missing text on bottom row of apps view in the overview

  [ Rico Tzschichholz ]
  * debian/control.in:
    - Bump minimum dependencies on gnome-desktop3, libcroco, libpulse,
      clutter, gsettings-desktop-schemas, gjs and mutter
    - Build-depend on libcanberra-gtk3-dev
    - Drop build-depends on gconf and libgnome-desktop3-dev
  * debian/rules:
    - Add src/gvc to gir list
  * Drop patches applied in new version:
    - git-set-ally-wm-theme.patch
    - git_messagetray_opacity_fix.patch
    - git_messagetray_remove_tweens.patch
    - git_messagetray_fix_expansion.patch
    - telepathyClient-Fix-auto-scroll-to-bottom.patch
    - ubuntu_screensaver_fallback.patch
  * 10-make-NetworkManager-optional.patch:
    - Dropped, this was Debian-specific and they intend to drop it too
  * Refreshed patches:
    - 14_make-GLX-optional.patch
    - ubuntu_lock_on_suspend.patch
  * ubuntu-lightdm-user-switching.patch: Disabled as it breaks the user menu

 -- Jeremy Bicha <jbicha@ubuntu.com>  Sat, 23 Feb 2013 17:43:44 -0500

gnome-shell (3.6.2-0ubuntu4) raring; urgency=low
