@@ -21,8 +21,8 @@ Build-Depends: autotools-dev,
                libclutter-1.0-dev (>= 1.13.4),
                libcroco3-dev (>= 0.6.8),
                libdbus-glib-1-dev,
-               libecal1.2-dev (>= 3.5.3),
-               libedataserver1.2-dev (>= 3.5.3),
+               libecal1.2-dev (>= 3.7.90),
+               libedataserver1.2-dev (>= 3.7.90),
                libgirepository1.0-dev (>= 1.29.15),
                libgjs-dev (>= 1.35.4),
                libglib2.0-dev (>= 2.31.6),
@@ -89,7 +89,7 @@ Depends: ${gir:Depends},
          gsettings-desktop-schemas (>= 3.7.4),
          python (>= 2.6),
          telepathy-mission-control-5,
-         evolution-data-server (>= 3.6.0)
+         evolution-data-server (>= 3.7.90)
 Recommends: gnome-contacts,
             gnome-control-center,
             gnome-session-fallback,
