@@ -5,8 +5,10 @@ gnome-shell (3.7.90-1) UNRELEASED; urgency=low
     d/p/ubuntu_lock_on_suspend.patch:
     + Dropped, Ubuntu specifc
   * d/p/14_make-GLX-optional.patch: Fixed upstream
+  * debian/control.in: Depend on e-d-s >= 3.7.90 to fix build failures due to
+    deprecated structures in headers.
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 24 Feb 2013 15:09:57 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed, 27 Feb 2013 22:16:21 +0100
 
 gnome-shell (3.7.90-0ubuntu1~raring1) raring; urgency=medium
 
